# othello-cli

./: README.md  TODO.md
othello/: Cargo.toml
othello-cli/: Cargo.toml
othello-cli/src/: main.rs
othello/src/: main.rs
