[package]
name = "othello-cli"
version = "1.1.0"
edition = "2021"
authors = ["LelsersLasers <millankumar@gmail.com>"]
description = "Play or watch Othello in your terminal!"
license = "MIT"
readme = "../README.md"
repository = "https://github.com/LelsersLasers/othello-cli"
homepage = "https://github.com/LelsersLasers/othello-cli"
keywords = ["Othello", "Reversi", "game", "terminal", "cli"]
categories = ["games", "command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
colored = "2"